--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container {
 	width: 600px;
-	background-color: navy;
+	background-color: blue;
 	margin: auto;
 	height: 450px;
 	border: 1px solid black;
